avoid error msg jump

--- a/src/scss/_radio-box.scss
+++ b/src/scss/_radio-box.scss
@@ -45,6 +45,10 @@
 				}
 			}
 		}
+
+		.o-forms-input__error {
+			bottom: -16px;
+		}
 	}
 }
 
